--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,28 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/server.ts --env-file .env"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
+    "@prisma/client": "^5.18.0",
     "dayjs": "^1.11.12",
     "fastify": "^4.28.1",
+    "fastify-type-provider-zod": "^2.0.0",
     "nodemailer": "^6.9.14",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "prisma": "^5.18.0"
+    "@types/node": "^22.4.0",
+    "prisma": "^5.18.0",
+    "tsx": "^4.17.0",
+    "typescript": "^5.5.4"
   }
 }
