--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/jwt": "^8.0.1",
     "@prisma/client": "^5.18.0",
     "dayjs": "^1.11.12",
     "fastify": "^4.28.1",
