--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cookie": "^9.4.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.1",
     "@prisma/client": "^5.18.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "dayjs": "^1.11.12",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
