--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
+    "react-world-flags": "^1.6.0"
   }
 }
