--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,21 @@
   "main": "src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/server.ts --env-file .env"
+    "dev": "tsx watch src/server.ts",  
+    "seed": "ts-node src/seeds/seedBarber.ts"
+
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cookie": "^9.4.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.1",
     "@prisma/client": "^5.18.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "dayjs": "^1.11.12",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
@@ -23,7 +28,7 @@
   "devDependencies": {
     "@types/node": "^22.4.0",
     "prisma": "^5.18.0",
-    "tsx": "^4.17.0",
+    "tsx": "^4.19.0",
     "typescript": "^5.5.4"
   }
 }
