--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -103,6 +103,12 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+                            /* Skip type checking all .d.ts files. */
+  
+
+    "skipLibCheck": true,
+    "types": ["node"]
+
+
   }
 }
