--- a/frontend/barbearia-app/package.json
+++ b/frontend/barbearia-app/package.json
@@ -14,7 +14,9 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-select": "^5.8.0",
+    "react-world-flags": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
