--- a/frontend/barbearia-app/package.json
+++ b/frontend/barbearia-app/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/jwt-decode": "^3.1.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
