--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "date-fns": "^3.6.0",
     "fastify": "^4.28.1",
     "fastify-zod": "^1.4.0",
+    "jwt-decode": "^4.0.0",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
