--- a/frontend/barbearia-app/package.json
+++ b/frontend/barbearia-app/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/jwt-decode": "^3.1.0",
+    "axios": "^1.7.7",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
     "react-world-flags": "^1.6.0"
   },
